adding pages to make it pop
adding a blue background and other css coloring

--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <style>
         /* Background color */
         body {
-            background-color: lightblue; 
+            background-color: lightblue; /* You can change this to any color you like */
             font-family: Arial, sans-serif;
             text-align: center;
             padding-top: 50px;
@@ -15,7 +15,7 @@
 
         /* Button styling */
         button {
-            background-color: #04AA6D; 
+            background-color: #04AA6D; /* green */
             color: white;
             padding: 15px 32px;
             font-size: 16px;
@@ -26,7 +26,7 @@
         }
 
         button:hover {
-            background-color: #028a5e; 
+            background-color: #028a5e; /* slightly darker on hover */
         }
 
         h1 {
@@ -39,15 +39,14 @@
     </style>
 </head>
 <body>
-    <h1>helper</h1>
-    <small>RYJGbuds</small>
+    <h1>About</h1>
     <button type="button" onclick="window.location.href='main.html'">Home</button>
-</br>
-<br/>
-<br/>
-<br/>
-<h1>Links</h1>
 
-we are adding it soon
+    <p>Resently we made a website called jacksongreen.online. It was good but we wanted more.
+        we built this website simular to jacksongreen.online but it is newer and improved. For instance, 
+        we adding a google helper to this webstite and many more organization to make students better organized
+        speak to your teachers about this website and if you can use it. Hope you enjoy!
+    </p>
+
 </body>
 </html>
