--- a/main.html
+++ b/main.html
@@ -1,13 +1,49 @@
-    <!DOCTYPE html>
-    <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>My First HTML Page</title>
-    </head>
-    <body>
-        <h1>RYJGbuds</h1>
-        <p>testing testing 123.</p>
-        <button type="button" onclick="window.location.href='helper.html'">Go to helper</button>
-    </body>
-    </html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My First HTML Page</title>
+    <style>
+        /* Background color */
+        body {
+            background-color: lightblue; /* You can change this to any color you like */
+            font-family: Arial, sans-serif;
+            text-align: center;
+            padding-top: 50px;
+        }
+
+        /* Button styling */
+        button {
+            background-color: #04AA6D; /* green */
+            color: white;
+            padding: 15px 32px;
+            font-size: 16px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: 0.3s;
+        }
+
+        button:hover {
+            background-color: #028a5e; /* slightly darker on hover */
+        }
+
+        h1 {
+            color: #333;
+        }
+
+        p {
+            color: #222;
+        }
+    </style>
+</head>
+<body>
+    <h1>RYJGbuds</h1>
+    <p>testing testing 123.</p>
+    <button type="button" onclick="window.location.href='helper.html'">Go to helper</button>
+</br>
+</br>
+    <button type="button" onclick="window.location.href='about.html'">Go to the about page</button>
+</body>
+</html>
