Fixing </br> in help and adding disclaimer about the project.

--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
         /* Button styling */
         button {
             background-color: #04AA6D; /* green */
-            color: white;
+            color: rgb(255, 213, 203);
             padding: 15px 32px;
             font-size: 16px;
             border: none;
@@ -53,11 +53,13 @@
     </br></br>
     <button type="button" onclick="window.location.href='about.html'">Go to about page</button>
     </br></br>
-
+<small><small>Programed by Jackson Green and Ryan Yip<smal></smal></small>
+</br/>
+<small>Coppy rights reserverd</small>
    <!-- Cube container -->
 <div id="cube-container"></div>
 
-<!-- Three.js CDN -->
+
 <script src="https://cdn.jsdelivr.net/npm/three@0.158.0/build/three.min.js"></script>
 <script>
     // Scene setup 6 7
@@ -94,5 +96,13 @@ scene.add(cube);
         camera.updateProjectionMatrix();
     });
 </script>
+
+<footer><fieldset>
+
+This was created using html, javascript, and css. Keep a reminder, use this website school appropriately.
+Keep in mind that this is still a beta release so expect bugs.
+
+</fieldset></footer>
+
 
 
