Adding credits and starting primary resorces

--- a/about.html
+++ b/about.html
@@ -47,6 +47,15 @@
         we adding a google helper to this webstite and many more organization to make students better organized
         speak to your teachers about this website and if you can use it. Hope you enjoy!
     </p>
+</br/>
+</br>
+    <h1>Credits</h1>
+    <footer><fieldset>
+    
+       Ryan Yip - CSS management /
+    Jackson Green - HTML management
+    
+    </fieldset></footer>
 
 </body>
 </html>
