--- a/main.html
+++ b/main.html
@@ -99,10 +99,14 @@ scene.add(cube);
 
 <footer><fieldset>
 
-This was created using html, javascript, and css. Keep a reminder, use this website school appropriately.
+This was created using html, javascript, and css. Reminder, use this website school appropriately.
 Keep in mind that this is still a beta release so expect bugs.
 
 </fieldset></footer>
-
-
-
+</br>
+</br>
+</br>
+</br>
+<h1> Primary Resorces </h1>
+<br/>
+</br/>
