--- a/Help.html
+++ b/Help.html
@@ -6,7 +6,7 @@
     </head>
     <body>
        
-       <img src="Speak.png" alt="Girl in a jacket" style="width:1400px;height:800px;">
+       <img src="Speak.png" alt="Speak image made by PranavejGrandhe" style="width:1400px;height:800px;">
     </br>
 </br>
 </br/>
