Update credits with correct names and roles

--- a/about.html
+++ b/about.html
@@ -52,9 +52,9 @@
     <h1>Credits</h1>
     <footer><fieldset>
     
-       Ryan Yip - Githug management CSS managenment 
-    Jackson Green - HTML management
-    PranavejGrandhe - Designer 
+    Ryan Yip - Github management & Frame work managnment
+    Jackson Green - HTML management & Javascript Managenment
+    Pranavej Grandhe - Design managnment & CSS managnment
     
     </fieldset></footer>
 
