Update authors in index.html

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ footer fieldset {
 <br><br>
 <br><br>
 
-<small><small>Programmed by Jackson Green and Ryan Yip</small></small>
+<small><small>Programmed by Jackson Green, Ryan Yip, and Pranav Grandhe</small></small>
 <br>
 <small>Copyright reserved</small>
 
