Change header from 'RYJGbuds' to 'RYJGPGbuds'

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ footer fieldset {
 </head>
 <body>
 
-<h1>RYJGbuds</h1>
+<h1>RYJGPGbuds</h1>
 <p>Made for school.</p>
 
 <!-- ===== Buttons ===== -->
