--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
 <style>
 body {
   font-family: Arial, Helvetica, sans-serif;
+  justify-content: center;
 }
 
 /* Background color */
@@ -15,29 +16,86 @@ body {
     padding-top: 50px;
     margin: 0;
 }
+.toolbar {
+    background-color: #028a5e;
+    padding: 12px;
+    display: flex;
+    justify-content: center;
+    gap: 25px;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1000;
+     border-radius: 16px;
+}
 
+.toolbar a {
+    color: white;
+    text-decoration: none;
+    font-size: 18px;
+    padding: 8px 14px;
+    border-radius: 4px;
+    transition: background 0.2s;
+}
+
+.toolbar:hover {
+animation: pulseEffect 0.6s infinite alternate;
+
+}
+/*background-color: #04AA6D;
+/* Keyframes for Pulse Effect */
+@keyframes pulseEffect {
+from {
+transform: scale(1);
+box-shadow: 0px 4px 10px rgba(2, 171, 72, 0.5);
+}
+to {
+transform: scale(1.1);
+box-shadow: 0px 6px 20px rgba(2, 141, 30, 0.7);
+}
+}
+    
+
+/* ===== Buttons ===== */
 button {
-    background-color: #04AA6D;
+    background-color: #0f9e6a;
     color: rgb(255, 213, 203);
     padding: 15px 32px;
     font-size: 16px;
     border: none;
-    border-radius: 5px;
+    border-radius: 16px;
     cursor: pointer;
     transition: 0.3s;
+    text-shadow : 2px 2px 2px rgba(0, 0, 0, 0.462);
+     border-radius: 16px;
+     animation: glow 1.8s infinite;
+}
+@keyframes glow {
+    0% {box-shadow: 0 0 5px rgba(255, 255, 255, 0.6);}
+    50% {box-shadow: 0 0 25px rgba(242, 242, 242, 0.8);}
+    100% {box-shadow: 0 0 5px rgba(255, 255, 255, 0.6);}
+
 }
 
-button:hover { background-color: #028a5e; }
+button:hover { 
+    background-color: #36a253; 
+}
+button:clicked {
+    border-color:#8a3602
+}
+
+
 
 .flip-card {
   background-color: transparent;
   width: 300px;
   height: 300px;
   perspective: 1000px;
+  justify-content: center;
 }
 
 .flip-card-inner {
-  position: relative;
+  position: center;
   width: 100%;
   height: 100%;
   text-align: center;
@@ -71,7 +129,13 @@ button:hover { background-color: #028a5e; }
 </style>
 </head>
 <body>
+<div class="toolbar">
+    <button><a href="index.html" onclick="navigateWithFade('index.html')">Home</a></button>
+    <button><a href="Help.html" onclick="navigateWithFade('Help.html')">Help</a></button>
+    <button><a href="about.html" onclick="navigateWithFade('about.html')">About</a></button>
+    <button><a href="timeline.html" onclick="navigateWithFade('timeline.html')">Updates</a></button>
 
+</div>
 <h1>About</h1>
 <h3>Hover over the image below:</h3>
 
@@ -115,7 +179,7 @@ button:hover { background-color: #028a5e; }
 </div>
 </br>
 <br/>
-    <button type="button" onclick="window.location.href='main.html'">Home</button>
+    
 <br><br>
 </body>
 </html>
