--- a/timeline.html
+++ b/timeline.html
@@ -11,6 +11,74 @@ body {
   background-color: #474e5d;
   font-family: Helvetica, sans-serif;
 }
+.toolbar {
+    background-color: #028a5e;
+    padding: 12px;
+    display: flex;
+    justify-content: center;
+    gap: 25px;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1000;
+     border-radius: 16px;
+}
+
+.toolbar a {
+    color: white;
+    text-decoration: none;
+    font-size: 18px;
+    padding: 8px 14px;
+    border-radius: 4px;
+    transition: background 0.2s;
+}
+
+.toolbar:hover {
+animation: pulseEffect 0.6s infinite alternate;
+
+}
+/*background-color: #04AA6D;
+/* Keyframes for Pulse Effect */
+@keyframes pulseEffect {
+from {
+transform: scale(1);
+box-shadow: 0px 4px 10px rgba(2, 171, 72, 0.5);
+}
+to {
+transform: scale(1.1);
+box-shadow: 0px 6px 20px rgba(2, 141, 30, 0.7);
+}
+}
+    
+
+/* ===== Buttons ===== */
+button {
+    background-color: #0f9e6a;
+    color: rgb(255, 213, 203);
+    padding: 15px 32px;
+    font-size: 16px;
+    border: none;
+    border-radius: 16px;
+    cursor: pointer;
+    transition: 0.3s;
+    text-shadow : 2px 2px 2px rgba(0, 0, 0, 0.462);
+     border-radius: 16px;
+     animation: glow 1.8s infinite;
+}
+@keyframes glow {
+    0% {box-shadow: 0 0 5px rgba(255, 255, 255, 0.6);}
+    50% {box-shadow: 0 0 25px rgba(242, 242, 242, 0.8);}
+    100% {box-shadow: 0 0 5px rgba(255, 255, 255, 0.6);}
+
+}
+
+button:hover { 
+    background-color: #36a253; 
+}
+button:clicked {
+    border-color:#8a3602
+}
+    
 
 /* The actual timeline (the vertical ruler) */
 .timeline {
@@ -19,18 +87,7 @@ body {
   margin: 0 auto;
 }
 /* ===== Buttons ===== make this button better */
-button {
-    background-color: #04AA6D;
-    color: rgb(255, 213, 203);
-    padding: 15px 32px;
-    font-size: 16px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: 0.3s;
-}
 
-button:hover { background-color: #028a5e; }
 
 /* The actual timeline (the vertical ruler) */
 .timeline::after {
@@ -152,11 +209,24 @@ button:hover { background-color: #028a5e; }
 </style>
 </head>
 <body>
+<div class="toolbar">
+    <button><a href="index.html" onclick="navigateWithFade('index.html')">Home</a></button>
+    <button><a href="Help.html" onclick="navigateWithFade('Help.html')">Help</a></button>
+    <button><a href="about.html" onclick="navigateWithFade('about.html')">About</a></button>
+    <button><a href="timeline.html" onclick="navigateWithFade('timeline.html')">Updates</a></button>
+
+</div>
 
 <div class="timeline">
+    <div class="container right">
+    <div class="content">
+      <h2>Nov 25 2025</h2>
+      <p>New animation for hover on navbar</p>
+    </div>
+  </div>
   <div class="container left">
     <div class="content">
-      <h2>NOV 22 2025</h2>
+      <h2>Nov 22 2025</h2>
       <p>About update</p>
     </div>
   </div>
@@ -192,7 +262,7 @@ button:hover { background-color: #028a5e; }
   </div>
 </div>
 </br> </br>
-<button type="button" onclick="window.location.href='index.html'">Home</button>
+
 </br> </br>
 </body>
 </html>
