--- a/about.html
+++ b/about.html
@@ -142,11 +142,12 @@ button:clicked {
 <div class="flip-card">
   <div class="flip-card-inner">
     <div class="flip-card-front">
-      <img src="img_avatar.png" alt="Avatar" style="width:300px;height:300px;">
+      <img src="RyanYip.jpeg" alt="Avatar" style="width:300px;height:300px;">
     </div>
     <div class="flip-card-back">
       <h1>Ryan Yip</h1> 
       <p>Github Management & Framework Management.</p> 
+       <button><a href="#" onclick="navigateWithFade('timeline')">Contact</a></button>
    
     </div>
   </div>
@@ -160,6 +161,7 @@ button:clicked {
     <div class="flip-card-back">
       <h1>Jackson Green</h1> 
       <p>HTML Management & Javascript Management.</p> 
+      <button><a href="#" onclick="navigateWithFade('timeline')">Contact</a></button>
      
     </div>
   </div>
@@ -173,6 +175,7 @@ button:clicked {
     <div class="flip-card-back">
       <h1>Pranav Grandhe</h1> 
       <p>CSS Management & Design Management.</p> 
+      <button><a href="#" onclick="navigateWithFade('timeline')">Contact</a></button>
     </br>
     </div>
   </div>
