--- a/Help.html
+++ b/Help.html
@@ -1,25 +1,35 @@
-    <!DOCTYPE html>
-    <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href=".css">
-        <title>Help</title>
-    </head>
-    <style>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        body {
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-/* Background color */
+    <h1 class="animate__animated animate__tada animate__infinite">
+    Help Page
+</h1>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+<style>
+/* ===== Body ===== */
 body {
-    background-color: lightblue;
+    background: linear-gradient(320deg, #eb92be, #ffef78);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    min-height: 100vh;
+    margin: 0;
+    padding-top: 90px; /* space for toolbar */
     font-family: Arial, sans-serif;
     text-align: center;
-    padding-top: 50px;
-    margin: 0;
+    transition: opacity 0.5s;
+    opacity: 1;
 }
+
+body.fade-out {
+    opacity: 0;
+}
+
+/* ===== Toolbar ===== */
 .toolbar {
     background-color: #028a5e;
     padding: 12px;
@@ -30,38 +40,40 @@ body {
     top: 0;
     width: 100%;
     z-index: 1000;
-     border-radius: 16px;
 }
 
-.toolbar a {
-    color: white;
-    text-decoration: none;
-    font-size: 18px;
+.toolbar button {
+    background: none;
+    border: 2px solid white;
     padding: 8px 14px;
-    border-radius: 4px;
+    border-radius: 6px;
+    color: white;
+    font-size: 18px;
+    cursor: pointer;
     transition: background 0.2s;
 }
 
+.toolbar button:hover {
+    background: rgba(255,255,255,0.15);
+}
+
 .toolbar:hover {
-animation: pulseEffect 0.6s infinite alternate;
-
+    animation: pulseEffect 0.6s infinite alternate;
 }
-/*background-color: #04AA6D;
-/* Keyframes for Pulse Effect */
+
 @keyframes pulseEffect {
-from {
-transform: scale(1);
-box-shadow: 0px 4px 10px rgba(2, 171, 72, 0.5);
+    from {
+        transform: scale(1);
+        box-shadow: 0px 4px 10px rgba(2, 171, 72, 0.5);
+    }
+    to {
+        transform: scale(1.1);
+        box-shadow: 0px 6px 20px rgba(2, 141, 30, 0.7);
+    }
 }
-to {
-transform: scale(1.1);
-box-shadow: 0px 6px 20px rgba(2, 141, 30, 0.7);
-}
-}
-    
 
-/* ===== Buttons ===== */
-button {
+/* ===== Main Buttons ===== */
+button.main-btn {
     background-color: #0f9e6a;
     color: rgb(255, 213, 203);
     padding: 15px 32px;
@@ -70,54 +82,82 @@ button {
     border-radius: 16px;
     cursor: pointer;
     transition: 0.3s;
-    text-shadow : 2px 2px 2px rgba(0, 0, 0, 0.462);
-     border-radius: 16px;
-     animation: glow 1.8s infinite;
+    animation: glow 1.8s infinite;
+    margin-top: 20px;
 }
+
 @keyframes glow {
-    0% {box-shadow: 0 0 5px rgba(255, 255, 255, 0.6);}
-    50% {box-shadow: 0 0 25px rgba(242, 242, 242, 0.8);}
-    100% {box-shadow: 0 0 5px rgba(255, 255, 255, 0.6);}
-
+    0% { box-shadow: 0 0 5px rgba(255, 255, 255, 0.6); }
+    50% { box-shadow: 0 0 25px rgba(242, 242, 242, 0.8); }
+    100% { box-shadow: 0 0 5px rgba(255, 255, 255, 0.6); }
 }
 
-button:hover { 
+button.main-btn:hover { 
     background-color: #36a253; 
 }
-button:clicked {
-    border-color:#8a3602
-}
-    </style>
-    <body>
-<div class="toolbar">
-    <button><a href="index.html" onclick="navigateWithFade('index.html')">Home</a></button>
-    <button><a href="Help.html" onclick="navigateWithFade('Help.html')">Help</a></button>
-    <button><a href="about.html" onclick="navigateWithFade('about.html')">About</a></button>
-    <button><a href="timeline.html" onclick="navigateWithFade('timeline.html')">Updates</a></button>
 
+/* ===== Image ===== */
+.help-image {
+    width: 90%;
+    max-width: 1400px;
+    height: auto;
+    border-radius: 8px;
+}
+
+/* Text Formatting */
+p {
+    width: 80%;
+    margin: auto;
+    font-size: 18px;
+    line-height: 1.6;
+}
+
+h1 {
+    margin-top: 40px;
+}
+
+</style>
+</head>
+
+<body>
+
+<!-- ===== Toolbar ===== -->
+<div class="toolbar">
+    <button onclick="navigateWithFade('index.html')">Home</button>
+    <button onclick="navigateWithFade('Help.html')">Help</button>
+    <button onclick="navigateWithFade('about.html')">About</button>
+    <button onclick="navigateWithFade('timeline.html')">Updates</button>
 </div>
-       <img src="Speak.png" alt="Speak image made by PranavejGrandhe" style="width:1400px;height:800px;">
-    </br>
-</br>
-</br/>
-</br/>
-       <h1>How to use our website</h1>
-       <p>To use our shop, first you need 
-        to sign in to your google account. Once you are 
-        signed in, you can access the shop by clicking
-         on the "bring me to shop" button located on the top right corner 
-         of the webpage. The helper will provide you with 
-         various tools and resources to assist you with every  
-         you need to purchace. You can use the shop to purchave cool shirts, browse 
-         to-do lists, and access important documents. Make sure 
-         andexplore all the features of the shop to get 
-         the most out of it!</p>
-</br/>
-</br/>
-       <h1>Contact Us</h1>
-       <p>If you have any questions or need further assistance, please feel free to contact us
-       </br> </br>
-        Phone: 201 - 724 - 8021 </br> </br>
-        <button type="button" onclick="window.location.href='index.html'">Home</button>                                                                                       
-    </body>
-    </html>
+
+<!-- Image -->
+<img src="Speak.png" alt="Speak image made by Pranav Grandhe" class="help-image">
+
+<h1>How to Use Our Website</h1>
+<p>
+    To use our shop, first sign in with your Google account. Once signed in,
+    you can access the shop by clicking the "Bring me to shop" button located
+    at the top right corner of the webpage.
+    The helper provides tools and resources to guide you through your purchases.
+    You can browse shirts, check to-do lists, and access important documents.
+    Make sure to explore all features to get the most out of your experience!
+</p>
+
+<h1>Contact Us</h1>
+<p>
+    If you have any questions or need assistance, feel free to contact us:
+    <br><br>
+    <strong>Phone:</strong> 201-724-8021
+</p>
+
+<!-- ===== Fade Navigation Script ===== -->
+<script>
+function navigateWithFade(url) {
+    document.body.classList.add('fade-out');
+    setTimeout(() => {
+        window.location.href = url;
+    }, 500);
+}
+</script>
+
+</body>
+</html>
