--- a/timeline.html
+++ b/timeline.html
@@ -1,16 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Updates Timeline</title>
+
 <style>
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
+/* ===== Body ===== */
 body {
-  background-color: #474e5d;
-  font-family: Helvetica, sans-serif;
+    background-color: #474e5d;
+    font-family: Helvetica, sans-serif;
+    margin: 0;
+    padding-top: 90px;
+    transition: opacity 0.5s;
 }
+
+body.fade-out {
+    opacity: 0;
+}
+
+/* ===== Toolbar ===== */
 .toolbar {
     background-color: #028a5e;
     padding: 12px;
@@ -21,38 +33,41 @@ body {
     top: 0;
     width: 100%;
     z-index: 1000;
-     border-radius: 16px;
 }
 
-.toolbar a {
-    color: white;
-    text-decoration: none;
-    font-size: 18px;
+.toolbar button {
+    background: none;
+    border: 2px solid white;
     padding: 8px 14px;
-    border-radius: 4px;
-    transition: background 0.2s;
+    border-radius: 6px;
+    color: white;
+    font-size: 18px;
+    cursor: pointer;
+    transition: background 0.25s;
+}
+
+.toolbar button:hover {
+    background: rgba(255,255,255,0.15);
 }
 
 .toolbar:hover {
-animation: pulseEffect 0.6s infinite alternate;
-
+    animation: pulseEffect 0.6s infinite alternate;
 }
-/*background-color: #04AA6D;
-/* Keyframes for Pulse Effect */
+
+/* Pulse animation */
 @keyframes pulseEffect {
-from {
-transform: scale(1);
-box-shadow: 0px 4px 10px rgba(2, 171, 72, 0.5);
+    from {
+        transform: scale(1);
+        box-shadow: 0px 4px 10px rgba(2, 171, 72, 0.5);
+    }
+    to {
+        transform: scale(1.08);
+        box-shadow: 0px 6px 20px rgba(2, 141, 30, 0.7);
+    }
 }
-to {
-transform: scale(1.1);
-box-shadow: 0px 6px 20px rgba(2, 141, 30, 0.7);
-}
-}
-    
 
-/* ===== Buttons ===== */
-button {
+/* ===== Styled Main Buttons (if any used) ===== */
+button.main-btn {
     background-color: #0f9e6a;
     color: rgb(255, 213, 203);
     padding: 15px 32px;
@@ -61,208 +76,221 @@ button {
     border-radius: 16px;
     cursor: pointer;
     transition: 0.3s;
-    text-shadow : 2px 2px 2px rgba(0, 0, 0, 0.462);
-     border-radius: 16px;
-     animation: glow 1.8s infinite;
+    animation: glow 1.8s infinite;
+    text-shadow: 2px 2px 2px rgba(0,0,0,0.4);
 }
+
 @keyframes glow {
-    0% {box-shadow: 0 0 5px rgba(255, 255, 255, 0.6);}
-    50% {box-shadow: 0 0 25px rgba(242, 242, 242, 0.8);}
-    100% {box-shadow: 0 0 5px rgba(255, 255, 255, 0.6);}
-
+    0% { box-shadow: 0 0 5px rgba(255,255,255,0.6); }
+    50% { box-shadow: 0 0 25px rgba(255,255,255,0.8); }
+    100% { box-shadow: 0 0 5px rgba(255,255,255,0.6); }
 }
 
-button:hover { 
-    background-color: #36a253; 
+button.main-btn:hover {
+    background-color: #36a253;
 }
-button:clicked {
-    border-color:#8a3602
-}
-    
 
-/* The actual timeline (the vertical ruler) */
+/* ===== Timeline Core ===== */
 .timeline {
-  position: relative;
-  max-width: 1200px;
-  margin: 0 auto;
+    position: relative;
+    max-width: 1200px;
+    margin: 0 auto;
 }
-/* ===== Buttons ===== make this button better */
 
-
-/* The actual timeline (the vertical ruler) */
+/* Vertical line */
 .timeline::after {
-  content: '';
-  position: absolute;
-  width: 6px;
-  background-color: white;
-  top: 0;
-  bottom: 0;
-  left: 50%;
-  margin-left: -3px;
+    content: "";
+    position: absolute;
+    width: 6px;
+    background-color: white;
+    top: 0;
+    bottom: 0;
+    left: 50%;
+    margin-left: -3px;
 }
 
-/* Container around content */
+/* Boxes */
 .container {
-  padding: 10px 40px;
-  position: relative;
-  background-color: inherit;
-  width: 50%;
+    padding: 20px 40px;
+    position: relative;
+    width: 50%;
+    background: inherit;
 }
 
-/* The circles on the timeline */
+/* Circles */
 .container::after {
-  content: '';
-  position: absolute;
-  width: 25px;
-  height: 25px;
-  right: -17px;
-  background-color: white;
-  border: 4px solid #FF9F55;
-  top: 15px;
-  border-radius: 50%;
-  z-index: 1;
+    content: "";
+    position: absolute;
+    width: 25px;
+    height: 25px;
+    background-color: white;
+    border: 4px solid #ff9f55;
+    top: 20px;
+    border-radius: 50%;
+    z-index: 1;
 }
 
-/* Place the container to the left */
-.left {
-  left: 0;
-}
-
-/* Place the container to the right */
-.right {
-  left: 50%;
-}
-
-/* Add arrows to the left container (pointing right) */
-.left::before {
-  content: " ";
-  height: 0;
-  position: absolute;
-  top: 22px;
-  width: 0;
-  z-index: 1;
-  right: 30px;
-  border: medium solid white;
-  border-width: 10px 0 10px 10px;
-  border-color: transparent transparent transparent white;
-}
-
-/* Add arrows to the right container (pointing left) */
+/* Arrows */
+.left::before,
 .right::before {
-  content: " ";
-  height: 0;
-  position: absolute;
-  top: 22px;
-  width: 0;
-  z-index: 1;
-  left: 30px;
-  border: medium solid white;
-  border-width: 10px 10px 10px 0;
-  border-color: transparent white transparent transparent;
+    content: "";
+    position: absolute;
+    top: 25px;
+    border: medium solid white;
 }
 
-/* Fix the circle for containers on the right side */
+/* Left side */
+.left {
+    left: 0;
+}
+
+.left::before {
+    right: 30px;
+    border-width: 10px 0 10px 10px;
+    border-color: transparent transparent transparent white;
+}
+
+.left::after {
+    right: -16px;
+}
+
+/* Right side */
+.right {
+    left: 50%;
+}
+
+.right::before {
+    left: 30px;
+    border-width: 10px 10px 10px 0;
+    border-color: transparent white transparent transparent;
+}
+
 .right::after {
-  left: -16px;
+    left: -16px;
 }
 
-/* The actual content */
+/* ===== Content Box ===== */
 .content {
-  padding: 20px 30px;
-  background-color: white;
-  position: relative;
-  border-radius: 6px;
+    padding: 25px 30px;
+    background-color: white;
+    border-radius: 6px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.2);
 }
 
-/* Media queries - Responsive timeline on screens less than 600px wide */
-@media screen and (max-width: 600px) {
-  /* Place the timelime to the left */
-  .timeline::after {
-  left: 31px;
-  }
-  
-  /* Full-width containers */
-  .container {
-  width: 100%;
-  padding-left: 70px;
-  padding-right: 25px;
-  }
-  
-  /* Make sure that all arrows are pointing leftwards */
-  .container::before {
-  left: 60px;
-  border: medium solid white;
-  border-width: 10px 10px 10px 0;
-  border-color: transparent white transparent transparent;
-  }
+.content h2 {
+    margin-top: 0;
+    color: #333;
+}
 
-  /* Make sure all circles are at the same spot */
-  .left::after, .right::after {
-  left: 15px;
-  }
-  
-  /* Make all right containers behave like the left ones */
-  .right {
-  left: 0%;
-  }
+/* ===== Mobile optimized ===== */
+@media screen and (max-width: 700px) {
+
+    .timeline::after {
+        left: 31px;
+    }
+
+    .container {
+        width: 100%;
+        padding-left: 70px;
+        padding-right: 25px;
+    }
+
+    .container::before {
+        left: 50px;
+        border-width: 10px 10px 10px 0;
+        border-color: transparent white transparent transparent;
+    }
+
+    .container::after,
+    .left::after,
+    .right::after {
+        left: 15px;
+    }
+
+    .right {
+        left: 0;
+    }
 }
 </style>
 </head>
-<body>
-<div class="toolbar">
-    <button><a href="index.html" onclick="navigateWithFade('index.html')">Home</a></button>
-    <button><a href="Help.html" onclick="navigateWithFade('Help.html')">Help</a></button>
-    <button><a href="about.html" onclick="navigateWithFade('about.html')">About</a></button>
-    <button><a href="timeline.html" onclick="navigateWithFade('timeline.html')">Updates</a></button>
 
+<body>
+
+<!-- ===== Toolbar ===== -->
+<div class="toolbar">
+    <button onclick="navigateWithFade('index.html')">Home</button>
+    <button onclick="navigateWithFade('Help.html')">Help</button>
+    <button onclick="navigateWithFade('about.html')">About</button>
+    <button onclick="navigateWithFade('timeline.html')">Updates</button>
 </div>
 
+<!-- ===== Timeline ===== -->
 <div class="timeline">
-    <div class="container right">
+
+  <div class="container right">
     <div class="content">
       <h2>Nov 25 2025</h2>
-      <p>New animation for hover on navbar</p>
+      <p>New animation added for navbar hover.</p>
     </div>
   </div>
+
   <div class="container left">
     <div class="content">
       <h2>Nov 22 2025</h2>
-      <p>About update</p>
+      <p>Updated About page.</p>
     </div>
   </div>
+
   <div class="container right">
     <div class="content">
       <h2>Nov 21 2025</h2>
-      <p>Spinning cube fix</p>
+      <p>Fixed spinning 3D cube.</p>
     </div>
   </div>
+
   <div class="container left">
     <div class="content">
       <h2>Nov 19 2025</h2>
-      <p>Update grammer</p>
+      <p>Grammar improvements site-wide.</p>
     </div>
   </div>
+
   <div class="container right">
     <div class="content">
       <h2>Nov 17 2025</h2>
-      <p>Help page</p>
+      <p>Help page added.</p>
     </div>
   </div>
+
   <div class="container left">
     <div class="content">
       <h2>Nov 17 2025</h2>
-      <p>Githube fix</p>
+      <p>GitHub sync fixed.</p>
     </div>
   </div>
+
   <div class="container right">
     <div class="content">
-      <h2>Nov 16</h2>
-      <p>First page</p>
+      <h2>Nov 16 2025</h2>
+      <p>First page created.</p>
     </div>
   </div>
-</div>
-</br> </br>
 
-</br> </br>
+</div>
+
+<!-- Spacer -->
+<br><br><br>
+
+<!-- Fade script -->
+<script>
+function navigateWithFade(url) {
+    document.body.classList.add("fade-out");
+    setTimeout(() => {
+        window.location.href = url;
+    }, 500);
+}
+</script>
+
 </body>
 </html>
+
