--- a/index.html
+++ b/index.html
@@ -10,145 +10,10 @@
 
 <!-- Animate.css -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-
+<link rel="stylesheet" href="main.css">
+<link rel="stylesheet" href="cube.css">
 <style>
-/* ===== Body ===== */
-body {
-    margin: 0;
-    padding-top: 90px;
-    font-family: 'Poppins', sans-serif;
-    text-align: center;
-    background: linear-gradient(320deg, #eb92be, #ffef78);
-    transition: opacity 0.5s;
-}
 
-body.fade-out {
-    opacity: 0;
-}
-
-/* ===== Toolbar ===== */
-.toolbar {
-    background-color: #028a5e;
-    padding: 12px;
-    display: flex;
-    justify-content: center;
-    gap: 25px;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: 1000;
-    border-radius: 16px;
-}
-
-.toolbar button {
-    background: none;
-    border: 2px solid white;
-    padding: 8px 14px;
-    border-radius: 6px;
-    color: white;
-    font-size: 18px;
-    cursor: pointer;
-    transition: background 0.25s;
-}
-
-.toolbar button:hover {
-    background: rgba(255,255,255,0.15);
-}
-
-.toolbar:hover {
-    animation: pulseEffect 0.6s infinite alternate;
-}
-
-@keyframes pulseEffect {
-    from { transform: scale(1); box-shadow: 0px 4px 10px rgba(2, 171, 72, 0.5); }
-    to { transform: scale(1.08); box-shadow: 0px 6px 20px rgba(2, 141, 30, 0.7); }
-}
-
-/* ===== Main Title ===== */
-h1 {
-    font-family: 'Orbitron', sans-serif;
-    font-weight: 700;
-    font-size: 4rem;
-    color: #ffef78;
-    text-shadow: 2px 2px 6px rgba(0,0,0,0.6);
-}
-
-/* ===== Paragraphs ===== */
-p, small {
-    color: #222;
-}
-
-/* ===== Buttons ===== */
-button.main-btn {
-    background-color: #0f9e6a;
-    color: #ffd5cb;
-    padding: 15px 32px;
-    font-size: 16px;
-    border: none;
-    border-radius: 16px;
-    cursor: pointer;
-    transition: 0.3s;
-    text-shadow: 2px 2px 2px rgba(0,0,0,0.45);
-    animation: glow 1.8s infinite;
-}
-
-@keyframes glow {
-    0% { box-shadow: 0 0 5px rgba(255,255,255,0.6); }
-    50% { box-shadow: 0 0 25px rgba(242,242,242,0.8); }
-    100% { box-shadow: 0 0 5px rgba(255,255,255,0.6); }
-}
-
-button.main-btn:hover {
-    background-color: #36a253;
-}
-
-/* ===== Cube Container ===== */
-#cube-container {
-    width: 200px;
-    height: 200px;
-    margin: 50px auto;
-    perspective: 800px;
-}
-
-.cube {
-    width: 100%;
-    height: 100%;
-    position: relative;
-    transform-style: preserve-3d;
-    animation: spin 5s linear infinite;
-}
-
-.face {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 128, 255, 0.7);
-    border: 2px solid #fff;
-    box-sizing: border-box;
-}
-
-.front  { transform: rotateY(0deg) translateZ(100px); }
-.back   { transform: rotateY(180deg) translateZ(100px); }
-.right  { transform: rotateY(90deg) translateZ(100px); }
-.left   { transform: rotateY(-90deg) translateZ(100px); }
-.top    { transform: rotateX(90deg) translateZ(100px); }
-.bottom { transform: rotateX(-90deg) translateZ(100px); }
-
-@keyframes spin {
-    from { transform: rotateX(0deg) rotateY(0deg); }
-    to { transform: rotateX(360deg) rotateY(360deg); }
-}
-
-/* ===== Footer ===== */
-footer fieldset {
-    margin: 50px auto;
-    width: 80%;
-    border: 1px solid #333;
-    padding: 15px;
-    background-color: rgba(255,255,255,0.8);
-    font-size: 14px;
-    text-align: center;
-}
 </style>
 </head>
 
