--- a/Help.html
+++ b/Help.html
@@ -8,113 +8,8 @@
     Help Page
 </h1>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+<link rel="stylesheet" href="main.css">
 <style>
-/* ===== Body ===== */
-body {
-    background: linear-gradient(320deg, #eb92be, #ffef78);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
-    min-height: 100vh;
-    margin: 0;
-    padding-top: 90px; /* space for toolbar */
-    font-family: Arial, sans-serif;
-    text-align: center;
-    transition: opacity 0.5s;
-    opacity: 1;
-}
-
-body.fade-out {
-    opacity: 0;
-}
-
-/* ===== Toolbar ===== */
-.toolbar {
-    background-color: #028a5e;
-    padding: 12px;
-    display: flex;
-    justify-content: center;
-    gap: 25px;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: 1000;
-}
-
-.toolbar button {
-    background: none;
-    border: 2px solid white;
-    padding: 8px 14px;
-    border-radius: 6px;
-    color: white;
-    font-size: 18px;
-    cursor: pointer;
-    transition: background 0.2s;
-}
-
-.toolbar button:hover {
-    background: rgba(255,255,255,0.15);
-}
-
-.toolbar:hover {
-    animation: pulseEffect 0.6s infinite alternate;
-}
-
-@keyframes pulseEffect {
-    from {
-        transform: scale(1);
-        box-shadow: 0px 4px 10px rgba(2, 171, 72, 0.5);
-    }
-    to {
-        transform: scale(1.1);
-        box-shadow: 0px 6px 20px rgba(2, 141, 30, 0.7);
-    }
-}
-
-/* ===== Main Buttons ===== */
-button.main-btn {
-    background-color: #0f9e6a;
-    color: rgb(255, 213, 203);
-    padding: 15px 32px;
-    font-size: 16px;
-    border: none;
-    border-radius: 16px;
-    cursor: pointer;
-    transition: 0.3s;
-    animation: glow 1.8s infinite;
-    margin-top: 20px;
-}
-
-@keyframes glow {
-    0% { box-shadow: 0 0 5px rgba(255, 255, 255, 0.6); }
-    50% { box-shadow: 0 0 25px rgba(242, 242, 242, 0.8); }
-    100% { box-shadow: 0 0 5px rgba(255, 255, 255, 0.6); }
-}
-
-button.main-btn:hover { 
-    background-color: #36a253; 
-}
-
-/* ===== Image ===== */
-.help-image {
-    width: 90%;
-    max-width: 1400px;
-    height: auto;
-    border-radius: 8px;
-}
-
-/* Text Formatting */
-p {
-    width: 80%;
-    margin: auto;
-    font-size: 18px;
-    line-height: 1.6;
-}
-
-h1 {
-    margin-top: 40px;
-}
 
 </style>
 </head>
