--- a/about.html
+++ b/about.html
@@ -10,189 +10,9 @@
 
 <!-- Animate.css -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-
+<link rel="stylesheet" href="main.css">
 <style>
-/* ===== Body ===== */
-body {
-    margin: 0;
-    padding-top: 90px;
-    font-family: 'Poppins', sans-serif;
-    text-align: center;
-    background: linear-gradient(320deg, #eb92be, #ffef78);
-    transition: opacity 0.5s;
-}
 
-body.fade-out { opacity: 0; }
-
-/* ===== Toolbar ===== */
-.toolbar {
-    background-color: #028a5e;
-    padding: 12px;
-    display: flex;
-    justify-content: center;
-    gap: 25px;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: 1000;
-    border-radius: 16px;
-}
-
-.toolbar button {
-    background: none;
-    border: 2px solid white;
-    padding: 8px 14px;
-    border-radius: 6px;
-    color: white;
-    font-size: 18px;
-    cursor: pointer;
-    transition: background 0.25s;
-}
-
-.toolbar button:hover { background: rgba(255,255,255,0.15); }
-
-.toolbar:hover { animation: pulseEffect 0.6s infinite alternate; }
-
-@keyframes pulseEffect {
-    from { transform: scale(1); box-shadow: 0px 4px 10px rgba(2,171,72,0.5); }
-    to { transform: scale(1.08); box-shadow: 0px 6px 20px rgba(2,141,30,0.7); }
-}
-
-/* ===== Headings ===== */
-h1 {
-    font-family: 'Orbitron', sans-serif;
-    font-size: 4rem;
-    color: #ffef78;
-    text-shadow: 2px 2px 6px rgba(0,0,0,0.6);
-    animation: fadeInDown 1s ease-out;
-}
-
-h3 {
-    color: #222;
-    animation: fadeIn 1.5s ease-out;
-}
-
-/* ===== Flip Cards ===== */
-.flip-card-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 40px;
-    margin: 50px 20px;
-}
-
-.flip-card {
-    background-color: transparent;
-    width: 300px;
-    height: 300px;
-    perspective: 1000px;
-    animation: fadeInUp 1s ease forwards;
-}
-
-.flip-card-inner {
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    transition: transform 0.8s;
-    transform-style: preserve-3d;
-    border-radius: 16px;
-    box-shadow: 0 10px 20px rgba(0,0,0,0.3);
-}
-
-.flip-card:hover .flip-card-inner {
-    transform: rotateY(180deg);
-}
-
-.flip-card-front, .flip-card-back {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    border-radius: 16px;
-    backface-visibility: hidden;
-}
-
-.flip-card-front {
-    background-color: #f0f0f0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
-}
-
-.flip-card-front img {
-    width: 100%;
-    height: 100%;
-    border-radius: 16px;
-    object-fit: cover;
-    transition: transform 0.5s ease;
-}
-
-.flip-card:hover .flip-card-front img {
-    transform: scale(1.1);
-}
-
-.flip-card-back {
-    background: linear-gradient(135deg, #2980b9, #6dd5fa);
-    color: white;
-    transform: rotateY(180deg);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 20px;
-}
-
-.flip-card-back h1 {
-    margin: 10px 0;
-}
-
-.flip-card-back p {
-    font-size: 16px;
-    margin-bottom: 20px;
-}
-
-.flip-card-back button {
-    background-color: #0f9e6a;
-    color: #ffd5cb;
-    padding: 10px 24px;
-    font-size: 16px;
-    border: none;
-    border-radius: 16px;
-    cursor: pointer;
-    text-shadow: 1px 1px 2px rgba(0,0,0,0.4);
-    animation: glow 1.8s infinite;
-    transition: background 0.3s;
-}
-
-.flip-card-back button:hover {
-    background-color: #36a253;
-}
-
-@keyframes glow {
-    0%, 100% { box-shadow: 0 0 5px rgba(255,255,255,0.6); }
-    50% { box-shadow: 0 0 20px rgba(242,242,242,0.8); }
-}
-
-/* ===== Animations ===== */
-@keyframes fadeInUp {
-    from { opacity: 0; transform: translateY(50px); }
-    to { opacity: 1; transform: translateY(0); }
-}
-
-@keyframes fadeInDown {
-    from { opacity: 0; transform: translateY(-50px); }
-    to { opacity: 1; transform: translateY(0); }
-}
-
-@keyframes fadeIn {
-    from { opacity: 0; }
-    to { opacity: 1; }
-}
-
-/* ===== Responsive ===== */
-@media (max-width: 1000px) {
-    .flip-card-container { flex-direction: column; align-items: center; }
-}
 </style>
 </head>
 <body>
