--- a/timeline.html
+++ b/timeline.html
@@ -3,214 +3,10 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Updates Timeline</title>
+<link rel="stylesheet" href="timeline.css">
 
 <style>
-* {
-    box-sizing: border-box;
-}
 
-/* ===== Body ===== */
-body {
-    background-color: #474e5d;
-    font-family: Helvetica, sans-serif;
-    margin: 0;
-    padding-top: 90px;
-    transition: opacity 0.5s;
-}
-
-body.fade-out {
-    opacity: 0;
-}
-
-/* ===== Toolbar ===== */
-.toolbar {
-    background-color: #028a5e;
-    padding: 12px;
-    display: flex;
-    justify-content: center;
-    gap: 25px;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: 1000;
-}
-
-.toolbar button {
-    background: none;
-    border: 2px solid white;
-    padding: 8px 14px;
-    border-radius: 6px;
-    color: white;
-    font-size: 18px;
-    cursor: pointer;
-    transition: background 0.25s;
-}
-
-.toolbar button:hover {
-    background: rgba(255,255,255,0.15);
-}
-
-.toolbar:hover {
-    animation: pulseEffect 0.6s infinite alternate;
-}
-
-/* Pulse animation */
-@keyframes pulseEffect {
-    from {
-        transform: scale(1);
-        box-shadow: 0px 4px 10px rgba(2, 171, 72, 0.5);
-    }
-    to {
-        transform: scale(1.08);
-        box-shadow: 0px 6px 20px rgba(2, 141, 30, 0.7);
-    }
-}
-
-/* ===== Styled Main Buttons (if any used) ===== */
-button.main-btn {
-    background-color: #0f9e6a;
-    color: rgb(255, 213, 203);
-    padding: 15px 32px;
-    font-size: 16px;
-    border: none;
-    border-radius: 16px;
-    cursor: pointer;
-    transition: 0.3s;
-    animation: glow 1.8s infinite;
-    text-shadow: 2px 2px 2px rgba(0,0,0,0.4);
-}
-
-@keyframes glow {
-    0% { box-shadow: 0 0 5px rgba(255,255,255,0.6); }
-    50% { box-shadow: 0 0 25px rgba(255,255,255,0.8); }
-    100% { box-shadow: 0 0 5px rgba(255,255,255,0.6); }
-}
-
-button.main-btn:hover {
-    background-color: #36a253;
-}
-
-/* ===== Timeline Core ===== */
-.timeline {
-    position: relative;
-    max-width: 1200px;
-    margin: 0 auto;
-}
-
-/* Vertical line */
-.timeline::after {
-    content: "";
-    position: absolute;
-    width: 6px;
-    background-color: white;
-    top: 0;
-    bottom: 0;
-    left: 50%;
-    margin-left: -3px;
-}
-
-/* Boxes */
-.container {
-    padding: 20px 40px;
-    position: relative;
-    width: 50%;
-    background: inherit;
-}
-
-/* Circles */
-.container::after {
-    content: "";
-    position: absolute;
-    width: 25px;
-    height: 25px;
-    background-color: white;
-    border: 4px solid #ff9f55;
-    top: 20px;
-    border-radius: 50%;
-    z-index: 1;
-}
-
-/* Arrows */
-.left::before,
-.right::before {
-    content: "";
-    position: absolute;
-    top: 25px;
-    border: medium solid white;
-}
-
-/* Left side */
-.left {
-    left: 0;
-}
-
-.left::before {
-    right: 30px;
-    border-width: 10px 0 10px 10px;
-    border-color: transparent transparent transparent white;
-}
-
-.left::after {
-    right: -16px;
-}
-
-/* Right side */
-.right {
-    left: 50%;
-}
-
-.right::before {
-    left: 30px;
-    border-width: 10px 10px 10px 0;
-    border-color: transparent white transparent transparent;
-}
-
-.right::after {
-    left: -16px;
-}
-
-/* ===== Content Box ===== */
-.content {
-    padding: 25px 30px;
-    background-color: white;
-    border-radius: 6px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.2);
-}
-
-.content h2 {
-    margin-top: 0;
-    color: #333;
-}
-
-/* ===== Mobile optimized ===== */
-@media screen and (max-width: 700px) {
-
-    .timeline::after {
-        left: 31px;
-    }
-
-    .container {
-        width: 100%;
-        padding-left: 70px;
-        padding-right: 25px;
-    }
-
-    .container::before {
-        left: 50px;
-        border-width: 10px 10px 10px 0;
-        border-color: transparent white transparent transparent;
-    }
-
-    .container::after,
-    .left::after,
-    .right::after {
-        left: 15px;
-    }
-
-    .right {
-        left: 0;
-    }
-}
 </style>
 </head>
 
@@ -226,7 +22,12 @@ button.main-btn:hover {
 
 <!-- ===== Timeline ===== -->
 <div class="timeline">
-
+  <div class="container left">
+    <div class="content">
+      <h2>Dec 1 2025</h2>
+      <p>Major aesthetics rework</p>
+    </div>
+  </div>
   <div class="container right">
     <div class="content">
       <h2>Nov 25 2025</h2>
