--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <button onclick="navigateWithFade('Help.html')">Help</button>
     <button onclick="navigateWithFade('about.html')">About</button>
     <button onclick="navigateWithFade('timeline.html')">Updates</button>
+    <button onclick="navigateWithFade('shop.html')">Shop</button>
 </div>
 
 <!-- ===== Animated Title ===== -->
