Change tool bar color added pranavs piction help page gramer

--- a/Help.html
+++ b/Help.html
@@ -24,34 +24,7 @@
         }
 
         /* ===== Toolbar ===== */
-        .toolbar {
-            display: flex;
-            gap: 10px;
-            padding: 12px;
-            background-color: #111;
-            position: sticky;
-            top: 0;
-            z-index: 10;
-        }
-
-        .toolbar button {
-            font-family: 'Poppins', sans-serif;
-            background-color: #333;
-            color: white;
-            border: none;
-            padding: 10px 18px;
-            border-radius: 6px;
-            cursor: pointer;
-            font-weight: 500;
-            letter-spacing: 0.5px;
-            transition: all 0.2s ease;
-        }
-
-        .toolbar button:hover {
-            background-color: #555;
-            transform: translateY(-2px);
-        }
-
+      
         /* ===== Page Content ===== */
         .container {
             padding: 40px;
@@ -160,6 +133,16 @@
 
     <p class="reveal">
         <strong>Phone:</strong> 201-724-8021
+    </p>
+
+    <h2 class="reveal">How to Use</h2>
+
+    <p class="reveal">
+        To use our website, simply navigate through the toolbar at the top.
+        Each button will take you to a different section, allowing you to explore
+        all the features we offer. To make a purchase, head to the Shop section,
+        select your items, and follow the checkout process. If you even need something or there is an issue
+        feel free to contact us using the information provided in the about page.
     </p>
 
 </div>
