--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
   <div class="flip-card">
     <div class="flip-card-inner">
       <div class="flip-card-front">
-        <img src="img_avatar.png" alt="Pranav Grandhe">
+        <img src="Pranav.jpeg" alt="Pranav Grandhe">
       </div>
       <div class="flip-card-back">
         <h1>Pranav Grandhe</h1>
