--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </div>
 
 <!-- ===== Animated Title ===== -->
-<h1 class="animate__animated animate__bounce animate__infinite">RYJGPGBUDS</h1>
+<h1 class="animate__animated animate__bounce animate__infinite">Cashory</h1>
 <p>Made for shopping.</p>
 <small>Programmed by Jackson Green, Ryan Yip, and Pranav Grandhe</small><br>
 <small>Copyright reserved</small>
