--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
   <div class="flip-card">
     <div class="flip-card-inner">
       <div class="flip-card-front">
-        <img src="JacksonGreen.jpeg" alt="Jackson Green">
+        <img src="Jackson.jpg" alt="Jackson Green">
       </div>
       <div class="flip-card-back">
         <h1>Jackson Green</h1>
