--- a/Help.html
+++ b/Help.html
@@ -103,7 +103,6 @@
 
     <h1 class="reveal">Help Page</h1>
 
-    <img src="Speak.png" alt="Speak image made by Pranav Grandhe" class="help-image">
 
     <h2 class="reveal">How to Use Our Website</h2>
 
@@ -146,6 +145,10 @@
     </p>
 
 </div>
+
+    <p class ="help-image">
+       Enjoy your experience!
+    </p>
 
 <!-- ===== Scripts ===== -->
 <script>
