--- a/about.html
+++ b/about.html
@@ -22,6 +22,7 @@
     <button onclick="navigateWithFade('Help.html')">Help</button>
     <button onclick="navigateWithFade('about.html')">About</button>
     <button onclick="navigateWithFade('timeline.html')">Updates</button>
+    <button onclick="navigateWithFade('shop.html')">Shop</button>
 </div>
 
 <h1 class="animate__animated animate__fadeInDown">About RYJGPGBUDS</h1>
@@ -36,7 +37,7 @@
       </div>
       <div class="flip-card-back">
         <h1>Ryan Yip</h1>
-        <p>Github & Framework Management</p>
+        <p>CEO, Html & Framework Management</p>
         <button onclick="alert('Contact Ryan Yip')">Contact</button>
       </div>
     </div>
@@ -64,7 +65,7 @@
       </div>
       <div class="flip-card-back">
         <h1>Pranav Grandhe</h1>
-        <p>CSS & Design Management</p>
+        <p>CSS, Github Management & Design Management</p>
         <button onclick="alert('Contact Pranav Grandhe')">Contact</button>
       </div>
     </div>
