Shop and bug fixes

--- a/shop.html
+++ b/shop.html
@@ -92,11 +92,12 @@
     <div class="flip-card">
         <div class="flip-card-inner">
             <div class="flip-card-front">
-                <img src="https://via.placeholder.com/300" alt="Item">
+                <img src="Wallet_IM1.jpeg" alt="Item">
             </div>
             <div class="flip-card-back">
+                <img src="Wallet_IM2.jpeg" alt="Item">
                 <h1>Item 1</h1>
-                <p>100% OFF!</p>
+                <p>50$</p>
                 <button>Buy</button>
             </div>
         </div>
