--- a/timeline.html
+++ b/timeline.html
@@ -14,26 +14,43 @@
 
 <!-- ===== Toolbar ===== -->
 <div class="toolbar">
-    <button onclick="navigateWithFade('index.html')">Home</button>
-    <button onclick="navigateWithFade('Help.html')">Help</button>
-    <button onclick="navigateWithFade('about.html')">About</button>
-    <button onclick="navigateWithFade('timeline.html')">Updates</button>
+  <button onclick="navigateWithFade('index.html')">Home</button>
+  <button onclick="navigateWithFade('Help.html')">Help</button>
+  <button onclick="navigateWithFade('about.html')">About</button>
+  <button onclick="navigateWithFade('timeline.html')">Updates</button>
+  <button onclick="navigateWithFade('shop.html')">Shop</button>
 </div>
 
 <!-- ===== Timeline ===== -->
 <div class="timeline">
   <div class="container left">
     <div class="content">
-      <h2>Dec 1 2025</h2>
-      <p>Major aesthetics rework</p>
+      <h2>Feb 8 2025</h2>
+      <p>Shop update</p>
     </div>
   </div>
+  <div class="timeline">
+    <div class="container left">
+      <div class="content">
+        <h2>Dec 1 2025</h2>
+        <p>Major aesthetics rework</p>
+      </div>
+    </div>
+    <div class="container right">
+      <div class="content">
+        <h2>Nov 25 2025</h2>
+        <p>New animation added for navbar hover.</p>
+      </div>
+    </div>
   <div class="container right">
     <div class="content">
       <h2>Nov 25 2025</h2>
       <p>New animation added for navbar hover.</p>
     </div>
   </div>
+
+
+
 
   <div class="container left">
     <div class="content">
