Adding videos to shop

--- a/shop.html
+++ b/shop.html
@@ -99,9 +99,22 @@
                 <h1>Item 1</h1>
                 <p>50$</p>
                 <button>Buy</button>
+                <button onclick="document.getElementById('videoPopup').style.display='flex'">
+                    Video
+                </button>
+                
             </div>
         </div>
     </div>
+        <div id="videoPopup">
+        <video controls>
+            <source src="Walletforweb_video.wav" type="video/mp4">
+        </video>
+    </div>
+  
+    
+
+
 
     <div class="flip-card">
         <div class="flip-card-inner">
