--- a/shop.html
+++ b/shop.html
@@ -108,7 +108,7 @@
     </div>
         <div id="videoPopup">
         <video controls>
-            <source src="Walletforweb_video.wav" type="video/mp4">
+            <source src="Wallet_video.mp4" type="video/mp4">
         </video>
     </div>
   
