--- a/shop.html
+++ b/shop.html
@@ -96,7 +96,7 @@
             </div>
             <div class="flip-card-back">
                 <img src="Wallet_IM2.jpeg" alt="Item">
-                <h1>Item 1</h1>
+                <h1>Wallet</h1>
                 <p>50$</p>
                 <button>Buy</button>
                 <button onclick="document.getElementById('videoPopup').style.display='flex'">
